--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" href="{{url_for('static', filename='logo/logo.png')}}" type="image/x-icon">
 </head>
 
 <body>
@@ -30,23 +31,65 @@
                         <li class="nav-item">
                         <a class="nav-link{%block active_home%} {%endblock%}" aria-current="page" href="/">Home</a>
                         </li>
+                        {%if current_user.is_authenticated == False %}
                         <li class="nav-item">
-                            <a class="nav-link {%block active_registrazione%} {%endblock%}" href="/">Registrati</a>
+                            <a class="nav-link {%block active_registrazione%} {%endblock%}" href="{{url_for('iscriviti')}}">Registrati</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link {%block active_login%} {%endblock%}" href="/">Accedi</a>
+                        <a class="nav-link {%block active_login%} {%endblock%}" href="{{url_for('login_page')}}">Accedi</a>
                         </li>
+                        {%else%}
                         <li class="nav-item">
                             <a class="nav-link {%block active_area_personale%}{%endblock%}" href="/">Area personale</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Logout</a>
+                            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                         </li>
+                        {%endif%}
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
+    <div class="container mt-4">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <article class="alert alert-{{category}} alert-dismissible fade show col-12" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </article>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+        <main class="row justify-content-center">
+          {%block content %}{% endblock %}
+        </main>
+
+        <footer class="mt-5 border-top d-flex justify-content-between">
+            <section>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item display-6 fs-5">Contatti</li>
+                    <li class="list-group-item display-6 fs-6 text-secondary">Email: info@wanderlust.com</li>
+                    <li class="list-group-item display-6 fs-6 text-secondary">Telefono: 0141957143</li>
+                    <li class="list-group-item display-6 fs-6 text-secondary">Indirizzo: Corso Duca degli Abruzzi 30, Torino </li>
+                    <li class="list-group-item display-6 fs-6 text-secondary">P.IVA: IT12345678901</li>
+                  </ul>
+            </section>
+            <section>
+                <p class="mt-3 text-secondary text-end"> © Wanderlust </p>
+                <section class = "d-flex">
+                    <i class="bi bi-instagram px-2 social_icon"></i>
+                    <i class="bi bi-whatsapp px-2 social_icon"></i>
+                    <i class="bi bi-twitter-x ps-2 social_icon"></i>
+                    <i class="bi bi-threads px-2 social_icon"></i>
+                </section>
+            </section>
+
+        </footer>
+    </div>
 
 
 
