--- a/templates/base.html
+++ b/templates/base.html
@@ -18,18 +18,19 @@
     <header>
         <nav id = "myNavbar" class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <div class = "col-9 d-flex justify-content-start align-items-center">
-                    <a class="navbar-brand d-flex justify-content-start align-content-center" href="{{url_for('home')}}">
+                <div class = "col-4 d-flex justify-content-start align-items-center">
+                    <a class="navbar-brand d-flex justify-content-start align-content-center" href="{{url_for('index')}}">
                         <img id ="logo" src="{{url_for('static', filename = 'logo/logo.png')}}" alt="Logo" class="d-inline-block align-text-top">
                     </a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <p id = "spotHomepage" class="col-5 fs-5">"La wanderlust è quel fuoco interiore che ci spinge a esplorare l'ignoto, a catturare l'essenza del mondo e a danzare con le sfumature della vita."</p>
                 <div class="collapse navbar-collapse col-3 d-flex justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link{%block active_home%} {%endblock%}" aria-current="page" href="/">Home</a>
+                        <a class="nav-link{%block active_home%} {%endblock%}" aria-current="page" href="{{url_for('index')}}">Home</a>
                         </li>
                         {%if current_user.is_authenticated == False %}
                         <li class="nav-item">
@@ -40,7 +41,7 @@
                         </li>
                         {%else%}
                         <li class="nav-item">
-                            <a class="nav-link {%block active_area_personale%}{%endblock%}" href="/">Area personale</a>
+                            <a class="nav-link {%block active_area_personale%}{%endblock%}" href="{{url_for('area_personale')}}">Area personale</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
@@ -52,7 +53,7 @@
         </nav>
     </header>
 
-    <div class="container mt-4">
+    <div id = "main" class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         {% for category, message in messages %}
@@ -71,7 +72,7 @@
         <footer class="mt-5 border-top d-flex justify-content-between">
             <section>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item display-6 fs-5">Contatti</li>
+                    <li class="list-group-item display-6 fs-5 fontCopperplate">Contatti</li>
                     <li class="list-group-item display-6 fs-6 text-secondary">Email: info@wanderlust.com</li>
                     <li class="list-group-item display-6 fs-6 text-secondary">Telefono: 0141957143</li>
                     <li class="list-group-item display-6 fs-6 text-secondary">Indirizzo: Corso Duca degli Abruzzi 30, Torino </li>
@@ -79,7 +80,7 @@
                   </ul>
             </section>
             <section>
-                <p class="mt-3 text-secondary text-end"> © Wanderlust </p>
+                <p class="mt-3 text-secondary text-end fontCopperplate"> © Wanderlust </p>
                 <section class = "d-flex">
                     <i class="bi bi-instagram px-2 social_icon"></i>
                     <i class="bi bi-whatsapp px-2 social_icon"></i>
