--- a/templates/profilo.html
+++ b/templates/profilo.html
@@ -3,12 +3,12 @@
 {%block active_area_personale%} active {%endblock%}
 {% block content %}
 
-<section>
+<section class="mb-4">
     <section class="d-flex justify-content-between">
         <h2 class=" fw-bold display-5 fs-2 fontCopperplate mb-4">I tuoi dettagli</h2>
         {%if current_user.tipologia == 'admin'%}
         <form action="{{url_for('lista_utenti')}}" method="POST">
-            <button type="submit" class="btn btn-outline-success mb-4">Lista utenti</button>
+            <button type="submit" class="btn btn-outline-success mb-4">LISTA UTENTI</button>
         </form>
         {%endif%}
     </section>
@@ -36,6 +36,85 @@
           </section>
       </section>
     </article>
+</section>
+
+<section class="mt-4">
+    <h2 class="fw-bold display-5 fs-2 fontCopperplate mb-1">Viaggi</h2>
+    <div class="d-grid gap-2 mb-4">
+        <button class="btn btn-outline-success" type="button" data-bs-toggle="modal" data-bs-target="#modalNewTrip">+</button>
+    </div>
+    <div class="modal fade" id="modalNewTrip" tabindex="-1" aria-labelledby="modalNewTrip" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalNewTrip">Nuova proposta</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form action="/" method="POST">
+                <div class="modal-body">
+                    <section class="mb-3">
+                        <label class = "col-form-label" for = "continente">Continente</label>
+                        <select id="continente" name="continente" class="form-select" aria-label="Default select example" required>
+                            <option selected></option>
+                            <option value="africa">Africa</option>
+                            <option value="asia">Asia</option>
+                            <option value="europa">Europa</option>
+                            <option value="oceania">Oceania</option>
+                            <option value="nord_america">Nord America</option>
+                            <option value="sud_america">Sud America</option>
+                        </select>
+                    </section>
+                    <section class="mb-3">
+                        <label class = "col-form-label" for = "nazione">Nazione</label>
+                        <select id="nazione" name="nazione" class="form-select" aria-label="Default select example" disabled>
+                            <option value="">Seleziona prima un continente</option>
+                        </select>
+                    </section>
+                    <section class="mb-3">
+                        <label for = "date" class = "col-form-label">Data di partenza</label>
+                        <input name = 'data' class="form-control" type="date" aria-label="default input example" id = "date" min="{{un_mese_dopo}}" required>
+                        <div id="passwordHelp" class="form-text">La data di partenza minima è tra 28 giorni!</div>
+                    </section>
+                    <section class="d-flex justify-content-between">
+                        <section>
+                            <label class = "col-form-label" for = "num_giorni">Numero di giorni</label>
+                            <select id="num_giorni" name="num_giorni" class="form-select" aria-label="Default select example" required>
+                                <option selected></option>
+                                {%for i in range(1,13)%}
+                                <option value="{{i}}">{{i}}</option>
+                                {%endfor%}
+                            </select>
+                        </section>
+                        <section>
+                            <label class = "col-form-label" for = "idAeroporto">Aeroporto di partenza</label>
+                            <select id="idAeroporto" name="aeroporto" class="form-select" aria-label="Default select example" required>
+                                <option selected></option>
+                                {%for aeroporto in aeroporti_italiani%}
+                                <option value="{{aeroporto}}">{{aeroporto}}</option>
+                                {%endfor%}
+                            </select>
+                        </section>
+                    </section>
+                    <label class = "d-block mt-3 mb-2" for = "idPrezzo">Prezzo</label>
+                    <article class="input-group">
+                      <span class="input-group-text">€</span>
+                      <input type="number" id = "idPrezzo" name = "prezzo" class="form-control" aria-label="Amount (to the nearest dollar)" required min="0">
+                      <span class="input-group-text">.00</span>
+                    </article>
+                </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+              <button type="submit" class="btn btn-success">Conferma</button>
+            </div>
+            </form>
+          </div>
+        </div>
+    </div>
+    {%if current_user.tipologia == 'admin' or current_user.tipologia == 'coordinatore'%}
+    <section>
+        <h3 class="fw-bold display-5 fs-4 fontCopperplate mb-4">Le tue proposte</h3>
+    </section>
+    {%endif%}
 </section>
 
 {%endblock%}
