--- a/templates/approvazione_viaggi.html
+++ b/templates/approvazione_viaggi.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %} {{super()}} Approvazione Viaggi {% endblock %}
+
 {% block content %}
 <h1 class=" fw-bold display-5 fs-2 fontCopperplate mb-4">PROPOSTE IN APPROVAZIONE</h1>
 <section class="fs-6 display-6 alert alert-info mb-4" role="alert">
@@ -8,8 +9,17 @@
 {%if viaggi_in_approvazione%}
 <section class="d-flex flex-wrap">
     {%for viaggio in viaggi_in_approvazione%}
-    <article class="me-3">
-        <img src="{{url_for('static', filename = 'viaggio/'+viaggio.img_viaggio)}}" alt="Questa è l'immagine del viaggio in {{viaggio.nazione}}">
+    <article class="me-4 ms-3 mb-4 image-container">
+        <img class="zoomable rounded" src="{{url_for('static', filename = 'viaggio/'+viaggio.img_viaggio)}}" alt="Questa è l'immagine del viaggio in {{viaggio.nazione}}">
+        <p class="titleImgPos">{{viaggio.titolo}}</p>
+        <section class="d-flex justify-content-start align-items-center sectionDaysImgPos">
+            <i class="bi bi-calendar-date me-2"></i>
+            <p class="pMarginNegativo">{{viaggio.num_giorni}} giorni</p>
+        </section>
+        <p class="priceImgPos pMarginNegativo">{{viaggio.prezzo}} €</p>
+        <form action="{{url_for('changeApprovazione', id_viaggio = viaggio.id)}}" method="POST">
+            <button type = "submit" class="btn btn-sm btn-success fav-button fontCopperplate">Approva</button>
+        </form>
     </article>
     {%endfor%}
 </section>
