--- a/templates/profilo.html
+++ b/templates/profilo.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %} {{super()}} Area Personale {% endblock %}
 {%block active_area_personale%} active {%endblock%}
+
 {% block content %}
 
 <section class="mb-4">
@@ -8,7 +9,7 @@
         <h1 class=" fw-bold display-5 fs-2 fontCopperplate mb-4">I TUOI DETTAGLI</h1>
         {%if current_user.tipologia == 'admin'%}
         <form action="{{url_for('lista_utenti')}}" method="POST">
-            <button type="submit" class="btn btn-outline-secondary mb-4">LISTA UTENTI</button>
+            <button type="submit" class="btn btn-outline-secondary mb-4 fontCopperplate">LISTA UTENTI</button>
         </form>
         {%endif%}
     </section>
@@ -43,7 +44,7 @@
         <h1 class="fw-bold display-5 fs-2 fontCopperplate mb-1">VIAGGI</h1>
         {%if current_user.tipologia == 'admin'%}
         <form action="{{url_for('approvazione_viaggi')}}" method="POST">
-            <button type="submit" class="btn btn-outline-secondary">IN APPROVAZIONE</button>
+            <button type="submit" class="btn btn-outline-secondary fontCopperplate">IN APPROVAZIONE</button>
         </form>
         {%endif%}
     </div>
@@ -133,7 +134,46 @@
 
     
     <section>
-        <h3 class="fw-bold display-5 fs-4 fontCopperplate mb-4">Le tue proposte</h3>
+        <h3 class="fw-bold display-5 fs-4 fontCopperplate mb-2 ms-2">Le tue proposte</h3>
+        <div class="dropdown mb-4 ms-2">
+            <form action = "{{url_for('area_personale')}}" method="POST">
+              <button class="fontCopperplate btn {%if filtroApprovazione == 'all'%}btn-outline-secondary{%elif filtroApprovazione=='1'%}btn-outline-success{%else%}btn-outline-primary{%endif%} dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {%if filtroApprovazione == 'all'%}Tutte
+                {%elif filtroApprovazione== '1'%} Approvate
+                {%else%} In attesa di approvazione
+                {%endif%}
+              </button>
+              <ul class="dropdown-menu">
+                {# Quando sottometto il form, passo al server il value del button, che mi servirà per filtrare tra le diverse propostr #}
+                <li><button type="submit" class="dropdown-item fontCopperplate" name="filtroApprovazione" value="all">Tutte</button></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><button type="submit" class="dropdown-item fontCopperplate" name="filtroApprovazione" value="1">Approvate</button></li>
+                <li><button type="submit" class="dropdown-item fontCopperplate" name="filtroApprovazione" value="0">In attesa di approvazione</button></li>
+              </ul>
+            </form>
+        </div>
+        {%for viaggio in viaggi_coordinatore%}
+        <article class="me-4 ms-2 mb-4 image-container">
+            <img class="zoomable rounded" src="{{url_for('static', filename = 'viaggio/'+viaggio.img_viaggio)}}" alt="Questa è l'immagine del viaggio in {{viaggio.nazione}}">
+            <p class="titleImgPos">{{viaggio.titolo}}</p>
+            <section class="d-flex justify-content-start align-items-center sectionDaysImgPos">
+                <i class="bi bi-calendar-date me-2"></i>
+                <p class="pMarginNegativo">{{viaggio.num_giorni}} giorni</p>
+            </section>
+            <p class="priceImgPos pMarginNegativo">{{viaggio.prezzo}} €</p>
+            {%if viaggio.approvato == 1%}
+            <div class="fav-button d-flex justify-content-start align-items-center bg-success text-white bg-opacity-50 fs-5"> 
+                <i class="bi bi-check-all me-1"></i>
+                <p class="pMarginNegativo pe-1 fontCopperplate">Approvato</p>
+            </div>
+            {%else%}
+            <div class="fav-button d-flex justify-content-start align-items-center bg-primary text-white bg-opacity-50 fs-5"> 
+                <i class="bi bi-hourglass-split me-1"></i>
+                <p class="pMarginNegativo pe-1 fontCopperplate">In attesa di approvazione</p>
+            </div> 
+            {%endif%}
+        </article>
+        {%endfor%}
     </section>
     {%endif%}
 </section>
