--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
         <section class="mb-3">
             <p>Non sei ancora registrato? <a href="{{url_for('iscriviti')}}">Clicca qui</a></p>
         </section>
-        <button type="submit" class="btn btn-success">Accedi</button>
+        <button type="submit" class="btn btn-success fontCopperplate">Accedi</button>
     </form>
 </article>
 {% endblock %}
