--- a/templates/profilo.html
+++ b/templates/profilo.html
@@ -179,3 +179,7 @@
 </section>
 
 {%endblock%}
+
+{%block js%}
+<script src="{{url_for('static', filename='viaggi.js')}}" type="text/javascript"></script>
+{%endblock%}
