--- a/templates/base.html
+++ b/templates/base.html
@@ -30,21 +30,21 @@
                 <div class="collapse navbar-collapse col-3 d-flex justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link{%block active_home%} {%endblock%}" aria-current="page" href="{{url_for('index')}}">Home</a>
+                        <a class="nav-link{%block active_home%} {%endblock%} fontCopperplate" aria-current="page" href="{{url_for('index')}}">Home</a>
                         </li>
                         {%if current_user.is_authenticated == False %}
                         <li class="nav-item">
-                            <a class="nav-link {%block active_registrazione%} {%endblock%}" href="{{url_for('iscriviti')}}">Registrati</a>
+                            <a class="nav-link {%block active_registrazione%} {%endblock%} fontCopperplate" href="{{url_for('iscriviti')}}">Registrati</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link {%block active_login%} {%endblock%}" href="{{url_for('login_page')}}">Accedi</a>
+                        <a class="nav-link {%block active_login%} {%endblock%} fontCopperplate" href="{{url_for('login_page')}}">Accedi</a>
                         </li>
                         {%else%}
                         <li class="nav-item">
-                            <a class="nav-link {%block active_area_personale%}{%endblock%}" href="{{url_for('area_personale')}}">Area personale</a>
+                            <a class="nav-link {%block active_area_personale%}{%endblock%} fontCopperplate" href="{{url_for('area_personale')}}">Area personale</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                            <a class="nav-link fontCopperplate" href="{{url_for('logout')}}">Logout</a>
                         </li>
                         {%endif%}
                     </ul>
@@ -97,7 +97,8 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="{{url_for('static', filename='viaggi.js')}}" type="text/javascript"></script>
+    {%block js%}
+    {%endblock%}
 </body>
 
 
