--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,7 @@
         </section>
         <input type="hidden" value="cliente" name="tipologia">
 
-        <button type="submit" class="btn btn-success">Registrati</button>
+        <button type="submit" class="btn btn-success fontCopperplate">Registrati</button>
     </form>
 </article>
 
