--- a/templates/viaggio.html
+++ b/templates/viaggio.html
@@ -24,7 +24,7 @@
         <section class="d-flex justify-content-between me-3 py-2 border-bottom align-items-center">
             <div class="d-flex justify-content-start fs-5">
                 <i class="bi bi-calendar-event me-2"></i>
-                <p class="fontCopperplate pMarginNegativo">Partenza:</p>
+                <p class="fontCopperplate pMarginNegativo">Data di partenza:</p>
             </div>
             <p class="pMarginNegativo fs-5">{{viaggio.data}}</p>
         </section>
@@ -74,16 +74,16 @@
 
             <div>
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-outline-secondary btn-sm me-3 fontCopperplate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-outline-secondary btn-sm me-3 fontCopperplate" data-bs-toggle="modal" data-bs-target="#modalModifica">
                     Modifica annuncio
                 </button>
                 <!-- Modal -->
                 <form action="{{url_for('modifica_viaggio', id_viaggio = viaggio.id)}}", method="POST", enctype="multipart/form-data">
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="modalModifica" tabindex="-1" aria-labelledby="modalModifica" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                <h1 class="modal-title fs-5 fontCopperplate" id="exampleModalLabel">Modifica annuncio</h1>
+                                <h1 class="modal-title fs-5 fontCopperplate" id="modalModifica">Modifica annuncio</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -156,6 +156,14 @@
                     </div>
                 </form>
             </div>
+            {%else%}
+            <form action="{{url_for('pagina_prenotazione', id_viaggio = viaggio.id, id_utente = current_user.id)}}", method="POST">
+                <button type="submit" class="btn btn-outline-success btn-sm fontCopperplate" data-bs-toggle="modal" data-bs-target="#modalPrenotazione">
+                    Prenota
+                </button>
+            </form>
+
+
             {%endif%}
         </section>
 
